# dailyair

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
dailyair/: __init__.py  config.py  curator.py  main.py
dailyair/fetchers/: __init__.py  base.py  email_fetcher.py  rss.py  youtube.py
dailyair/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
dailyair/outputs/: __init__.py  email_output.py  google_docs.py  markdown.py  telegram.py  tts.py
scripts/: setup_cron.sh
